<resources>
    <string name="app_name">Labyrinth</string>

    <string name="resume">RESUME</string>
    <string name="new_game">NEW GAME</string>
    <string name="load_game">LOAD GAME</string>
    <string name="menu">MENU</string>
    <string name="save_game">SAVE GAME</string>
    <string name="settings">SETTINGS</string>
    <string name="exit">EXIT</string>
    <string name="ok">OK</string>
    <string name="cencel">CENCEL</string>
    <string name="pause">PAUSE</string>
    <string name="end">END</string>
    <string name="labyrinth_size">LABYRINTH SIZE</string>
    <string name="mode">MODE</string>
    <string name="controller">CONTROLLER</string>
    <string name="solution_shown">Solution shown</string>
    <string name="solution_hidden">Solution hidden</string>

    <string-array name="sizes">
        <item>11x11</item>
        <item>21x21</item>
        <item>35x25</item>
        <item>25x35</item>
        <item>31x31</item>
        <item>41x41</item>
    </string-array>

    <string-array name="modes">
        <item>STANDART</item>
        <item>RANDOM</item>
    </string-array>

    <string-array name="controllers">
        <item>KEYS</item>
        <item>ACCELEROMETER</item>

    </string-array>


</resources>
