<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="devchallenge.labyrinth.MenuActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/menu_grid"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:typeface="serif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/title_text_size" />
    </LinearLayout>


    <GridLayout
        android:id="@+id/menu_grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:columnCount="1">

        <Button
            android:id="@+id/new_game"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="@dimen/s_dimen"
            android:onClick="onClick"
            android:text="@string/new_game" />

        <Button
            android:id="@+id/load_game"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="@dimen/s_dimen"
            android:onClick="onClick"
            android:text="@string/load_game" />

        <Button
            android:id="@+id/settings"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="@dimen/s_dimen"
            android:onClick="onClick"
            android:text="@string/settings" />

        <Button
            android:id="@+id/exit"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="@dimen/s_dimen"
            android:onClick="onClick"
            android:text="@string/exit" />

    </GridLayout>

</RelativeLayout>
